<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/bg_light_blue">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/btn__blue"
        android:gravity="center"
        android:text="@string/happiness_booster"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/doyou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="120dp"
        android:text="@string/do_you_need_more_help"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ratelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"

        android:paddingLeft="70dp"
        android:paddingRight="70dp">

        <Button
            android:id="@+id/btnyesrepeat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/btn__blue"
            android:text="@string/yes"
            android:textColor="@color/white" />

        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="0.9" />

        <Button
            android:id="@+id/btnno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/btn__blue"
            android:text="@string/no"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/choose"
        android:layout_width="wrap_content"
        android:layout_height="22dp"
        android:text="@string/choose_one_to_continue"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible" />



    <LinearLayout
        android:id="@+id/helplayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="invisible">

        <Button
            android:id="@+id/btnback"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/btn__blue"
            android:text="@string/do_another_activity"
            android:textColor="@color/white" />

        <View
            android:layout_width="1dp"
            android:layout_height="1dp"
            android:layout_weight="0.3" />

        <Button
            android:id="@+id/btnresource"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/btn__blue"
            android:text="@string/talk_to_an_expert"
            android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>