<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/viewEntryBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_purple"
    tools:context="crudmoodstatus.ViewEntryActivity">

    <TextView
        android:id="@+id/addDate"
        android:layout_width="202dp"
        android:layout_height="44dp"
        android:shadowColor="#423F3F"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/recorded_date"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.816"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/title1"
        android:layout_width="110dp"
        android:layout_height="45dp"
        android:shadowColor="#423F3F"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/date"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.162"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <TextView
        android:id="@+id/title3"
        android:layout_width="350dp"
        android:layout_height="58dp"
        android:shadowColor="#423F3F"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="How do you feel now?"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

    <TextView
        android:id="@+id/addTime"
        android:layout_width="205dp"
        android:layout_height="43dp"
        android:layout_marginEnd="32dp"
        android:shadowColor="#423F3F"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/recorded_time"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.756"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <TextView
        android:id="@+id/title2"
        android:layout_width="113dp"
        android:layout_height="42dp"
        android:shadowColor="#423F3F"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/time"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.164"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="337dp"
        android:layout_height="123dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.38">

        <ImageButton
            android:id="@+id/addEmoji1"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/emoticon1"
            android:scaleType="fitCenter"
            android:tint="#00FFFFFF"
            app:srcCompat="@drawable/joy" />

        <ImageButton
            android:id="@+id/addEmoji2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/emoticon2"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/compassion" />

        <ImageButton
            android:id="@+id/addEmoji3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/emoticon3"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/powerless" />

        <ImageButton
            android:id="@+id/addEmoji4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/emoticon4"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/indifference" />

        <ImageButton
            android:id="@+id/addEmoji5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/emoticon5"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/sadness" />
    </LinearLayout>

    <TextView
        android:id="@+id/addEmoDes1"
        android:layout_width="98dp"
        android:layout_height="53dp"
        android:shadowColor="#423F3F"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/joy"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:drawableTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.121"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.03"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/addEmoDes2"
        android:layout_width="218dp"
        android:layout_height="55dp"
        android:shadowColor="#423F3F"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/compassionate"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:drawableTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.03"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/addEmoDes3"
        android:layout_width="218dp"
        android:layout_height="55dp"
        android:shadowColor="#423F3F"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/powerless"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:drawableTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.03"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/addEmoDes4"
        android:layout_width="218dp"
        android:layout_height="55dp"
        android:shadowColor="#423F3F"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/uninterested"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:drawableTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.03"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/addEmoDes5"
        android:layout_width="129dp"
        android:layout_height="55dp"
        android:shadowColor="#423F3F"
        android:shadowDx="1.5"
        android:shadowDy="1.3"
        android:shadowRadius="1.6"
        android:text="@string/sad"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:drawableTint="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.03"
        tools:visibility="visible" />


    <EditText
        android:id="@+id/addActivityStatus"
        android:layout_width="318dp"
        android:layout_height="160dp"
        android:layout_marginTop="76dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="start|top"
        android:hint="What is on your mind?"
        android:inputType="textMultiLine"
        android:padding="14dp"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
                app:layout_constraintCircleRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.592"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.067" />


    <Button
        android:id="@+id/addEntryBut"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/bg_light_purple"
        android:shadowRadius="5"
        android:text="Save"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addActivityStatus" />

    <Button
        android:id="@+id/cancelEntry"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bg_light_purple"
        android:shadowRadius="5"
        android:text="Cancel"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addEntryBut" />

</androidx.constraintlayout.widget.ConstraintLayout>